updated body overflow auto, ask portion fixed

--- a/eindlabo/labox/public/sass/stylesheets/_base_ask.scss
+++ b/eindlabo/labox/public/sass/stylesheets/_base_ask.scss
@@ -11,7 +11,8 @@ body
 {
 
 	
-		overflow: hidden;
+		/*overflow: hidden;*/
+		overflow: auto;
 		font-family:  $font-oxygen;
 		@include font-size(1.6) ;
 		
@@ -489,8 +490,11 @@ body
 					width: 25%;
 					/*@extend .twosides;*/
 					margin: 30px 0;
-					
+					right: 25px;
+					position: fixed;
 					overflow: hidden;
+
+
 					.questionHeader
 					{
 						@include font-size(1.1) ;
@@ -614,6 +618,7 @@ body
 			height: 30px;
 			bottom: 0;
 			background-color: $headerColor;
+
 
 			.footerinfo
 			{
